# SeetaFaceEngine

FaceAlignment/: CMakeLists.txt
FaceAlignment/src/: cfan.cpp  sift.cpp  wrapper.cpp
FaceDetection/: CMakeLists.txt
FaceDetection/src/: wrapper.cpp
FaceIdentification/: CMakeLists.txt
FaceIdentification/tools/: wrapper.cpp
